Endret bekreftelse-tjeneste til å bruke jib-distroless convention