@@ -1,7 +1,7 @@
 
 plugins {
     kotlin("jvm")
-    id("com.google.cloud.tools.jib")
+    id("jib-distroless")
     application
 }
 
@@ -68,15 +68,4 @@ application {
 
 tasks.withType<Test>().configureEach {
     useJUnitPlatform()
-}
-
-jib {
-    from.image = "$baseImage:$jvmMajorVersion"
-    to.image = "${image ?: project.name}:${project.version}"
-    container {
-        environment = mapOf(
-            "IMAGE_WITH_VERSION" to "${image ?: project.name}:${project.version}"
-        )
-        jvmFlags = listOf("-XX:ActiveProcessorCount=4", "-XX:+UseZGC", "-XX:+ZGenerational")
-    }
 }
